update text; bigger phone

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <base href="https://www.psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807211219.css">
+     <link rel="stylesheet" href="css/style_1807211353.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -69,30 +69,46 @@
                          <img src="images/IW.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
                     </div>
                     <div class="col-md-8 col-sm-6">
+                         <p>
+                         <ul>
+                              <li>Trudno Ci się skupić na obowiązkach ?</li>
+                              <li>Czujesz się przygnębiony i nie masz motywacji do działania ?</li>
+                              <li>Trudno Ci się skupić na obowiązkach ?</li>
+                              <li>Masz poczucie, że przytłaczają Cię problemy ?</li>
+                              <li>Borykasz się z uczuciem lęku ?</li>
+                              <li>Twoje relacje z ludźmi nie układają się tak jakbyś tego chciał ?</li>
+                              <li>Nie radzisz sobie w sferze zawodowej ?</li>
+                              <li>Jesteś drażliwy i nerwowy ?</li>
+                              <li>Nie akceptujesz siebie ?</li>
+                         </ul>
+                         </p>
+                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i zmierzyć się z nimi.
                          <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
                               W kontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
                               Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
                          <p>Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
                               To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
                               Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
+<!--
                          <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w&nbspKatowicach ze specjalnością w&nbspPsychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia.
                               Obecnie kształcę się w&nbspKatedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w&nbspKrakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
                          <p>Doświadczenie zawodowe zdobywałam między innymi w&nbspSosnowieckim Szpitalu Miejskim w&nbspOddziale Psychiatrycznym dla Chorych Somatycznie oraz w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach
                               zarówno w&nbspPoradni Zdrowia Psychicznego, jak i&nbspna Dziennych Oddziałach Psychiatrycznych dla dorosłych i&nbspdla dzieci.</p>
                          <p>Aktualnie pracuję w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach w&nbspPoradni Zdrowia Psychicznego, w&nbspDziennym Oddziale Psychiatrycznym oraz w&nbspDziennym Oddziale Leczenia Nerwic.</p>
+-->
 
-                         <!--<div style="text-align: center">
+                         <div style="text-align: center">
                               <button id="show-more-about" class="btn" onclick="$('#about-more').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
-                         </div>-->
+                         </div>
                     </div>
-                    <!--<div class="col-md-12 col-sm-12" id="about-more" style="display: none">
+                    <div class="col-md-12 col-sm-12" id="about-more" style="display: none">
                          <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w Katowicach ze specjalnością w Psychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia. Obecnie kształcę się w Katedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w Krakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
                          <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
                          <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
                          <div style="text-align: center">
                               <button id="hide-more-about" class="btn" onclick="$('#about-more').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();" style="display: none"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
                          </div>
-                    </div>-->
+                    </div>
                </div>
           </div>
      </section>
