--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <base href="https://www.psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807211353.css">
+     <link rel="stylesheet" href="css/style_1807211417.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -23,10 +23,10 @@
      <header>
           <div class="container">
                <div class="row">
-                    <div class="col-md-4 col-sm-5">
-                         <p>Pyschoterapia Katowice - Izabela Witkowicz</p>
+                    <div class="col-md-5 col-sm-5">
+                         <div><h1>Psychoterapia Katowice - Izabela Witkowicz</h1></div>
                     </div>
-                    <div class="col-md-8 col-sm-7 text-align-right">
+                    <div class="col-md-7 col-sm-7 text-align-right">
                          <span class="phone-icon"><i class="fa fa-phone"></i> +48 795-876-144</span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></span>
                     </div>
@@ -60,9 +60,7 @@
           <div class="container">
                <div class="row" style="text-align: justify;">
                     <div style="text-align: center">
-                         <h1 style="margin-top: 0;">
-                              Izabela Witkowicz
-                         </h1>
+                         <h1>Izabela Witkowicz</h1>
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
                     <div class="col-md-4 col-sm-6" style="margin-bottom: 20px;">
