new picture; updated styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="container">
                <div class="row">
                     <div class="col-md-5 col-sm-5">
-                         <div><h1>Psychoterapia Katowice - Izabela Witkowicz</h1></div>
+                         <div><h1>Psycholog Katowice - Izabela Witkowicz</h1></div>
                     </div>
                     <div class="col-md-7 col-sm-7 text-align-right">
                          <span class="phone-icon"><i class="fa fa-phone"></i> +48 795-876-144</span>
@@ -58,53 +58,47 @@
      </section>
      <section id="about">
           <div class="container">
-               <div class="row" style="text-align: justify;">
+               <div class="row justify-text-desktop">
                     <div style="text-align: center">
                          <h1>Izabela Witkowicz</h1>
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
                     <div class="col-md-4 col-sm-6" style="margin-bottom: 20px;">
-                         <img src="images/IW.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
+                         <img src="images/PsychologKatowiceWitkowicz.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
                     </div>
                     <div class="col-md-8 col-sm-6">
-                         <p>
+                         <br>
                          <ul>
-                              <li>Trudno Ci się skupić na obowiązkach ?</li>
-                              <li>Czujesz się przygnębiony i nie masz motywacji do działania ?</li>
-                              <li>Trudno Ci się skupić na obowiązkach ?</li>
-                              <li>Masz poczucie, że przytłaczają Cię problemy ?</li>
-                              <li>Borykasz się z uczuciem lęku ?</li>
-                              <li>Twoje relacje z ludźmi nie układają się tak jakbyś tego chciał ?</li>
-                              <li>Nie radzisz sobie w sferze zawodowej ?</li>
-                              <li>Jesteś drażliwy i nerwowy ?</li>
-                              <li>Nie akceptujesz siebie ?</li>
+                              <li>Czujesz się przygnębiony i nie masz motywacji do działania&nbsp?</li>
+                              <li>Trudno Ci się skupić na obowiązkach&nbsp?</li>
+                              <li>Masz poczucie, że przytłaczają Cię problemy&nbsp?</li>
+                              <li>Borykasz się z uczuciem lęku&nbsp?</li>
+                              <li>Twoje relacje z ludźmi nie układają się tak jakbyś tego chciał&nbsp?</li>
+                              <li>Nie radzisz sobie w sferze zawodowej&nbsp?</li>
+                              <li>Jesteś drażliwy i nerwowy&nbsp?</li>
+                              <li>Nie akceptujesz siebie&nbsp?</li>
                          </ul>
-                         </p>
-                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i zmierzyć się z nimi.
-                         <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
-                              W kontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
+                         <br>
+                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i zmierzyć się z nimi.</p>
+                         <br>
+                         <p>Jestem psychologiem i&nbsppsychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
+                              W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
                               Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
-                         <p>Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
+
+                         <div style="text-align: center; margin-top: 20px;">
+                              <button id="show-more-about" class="btn" onclick="$('.about-more-hidden').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
+                         </div>
+
+                    </div>
+                    <div class="col-md-12 col-sm-12 about-more-hidden" style="display: none">
+                         <p class="about-more-hidden" style="display: none">Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
                               To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
                               Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
-<!--
-                         <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w&nbspKatowicach ze specjalnością w&nbspPsychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia.
-                              Obecnie kształcę się w&nbspKatedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w&nbspKrakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
-                         <p>Doświadczenie zawodowe zdobywałam między innymi w&nbspSosnowieckim Szpitalu Miejskim w&nbspOddziale Psychiatrycznym dla Chorych Somatycznie oraz w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach
-                              zarówno w&nbspPoradni Zdrowia Psychicznego, jak i&nbspna Dziennych Oddziałach Psychiatrycznych dla dorosłych i&nbspdla dzieci.</p>
-                         <p>Aktualnie pracuję w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach w&nbspPoradni Zdrowia Psychicznego, w&nbspDziennym Oddziale Psychiatrycznym oraz w&nbspDziennym Oddziale Leczenia Nerwic.</p>
--->
-
-                         <div style="text-align: center">
-                              <button id="show-more-about" class="btn" onclick="$('#about-more').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
-                         </div>
-                    </div>
-                    <div class="col-md-12 col-sm-12" id="about-more" style="display: none">
                          <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w Katowicach ze specjalnością w Psychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia. Obecnie kształcę się w Katedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w Krakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
                          <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
                          <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
                          <div style="text-align: center">
-                              <button id="hide-more-about" class="btn" onclick="$('#about-more').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();" style="display: none"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
+                              <button id="hide-more-about" class="btn" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();" style="display: none"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
                          </div>
                     </div>
                </div>
@@ -215,7 +209,7 @@
                                    <p><i class="fa fa-envelope-o"></i> <a class="contact-mail" href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                               </div>
                          </div>
-                         <div class="col-md-12 col-sm-12" style="text-align: justify; margin-top: 20px">
+                         <div class="col-md-12 col-sm-12 justify-text-desktop" style="margin-top: 20px">
                               <p>Zapraszam do kontaktu telefonicznego lub mailowego. W&nbspsytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
                               <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania.</p>
                          </div>
@@ -253,10 +247,10 @@
                               </a>
                               <div class="arrival-description">
                               <p>
-                                   Gabinet znajduje się w śródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o&nbspnumerach 6, 14, 16, 19, 23, 36.
-                                   <br>Lokalizacja pozwala również w bezproblemowy sposób dostać się autobusem lub własnym samochodem.
-                                   W&nbspprzypadku własnego pojazdu zalecam skorzystać z parkingu znajdującego się w Galerii Katowickiej gdzie każdy znajdzie miejsce, a przez 2 godziny parking jest darmowy.
-                                   Gabinet znajduje się w odległości 400 m od Galerii kierując się w stronę Katowickiego Rynku.
+                                   Gabinet znajduje się w&nbspśródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o&nbspnumerach 6, 14, 16, 19, 23, 36.
+                                   <br>Lokalizacja pozwala również w&nbspbezproblemowy sposób dostać się autobusem lub własnym samochodem.
+                                   W&nbspprzypadku własnego pojazdu zalecam skorzystać z&nbspparkingu znajdującego się w&nbspGalerii Katowickiej gdzie każdy znajdzie miejsce, a&nbspprzez 2 godziny parking jest darmowy.
+                                   Gabinet znajduje się w&nbspodległości 400&nbspm od Galerii kierując się w&nbspstronę Katowickiego Rynku.
                               </p>
                               </div>
                          </div>
@@ -270,9 +264,9 @@
                <div class="row">
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-4">
-                              <p>Psychoterapia Katowice</p>
                               <p>Izabela Witkowicz</p>
                               <p>Psychoterapeuta, psycholog</p>
+                              <p>Katowice</p>
                          </div>
                          <div class="col-md-4 col-sm-4">
                               <p>Telefon: +48 795 876 144</p>
