update responsive img

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
      <section id="about">
           <div class="container">
                <div class="row justify-text-desktop">
-                    <div style="text-align: center">
+                    <div class="text-align-center">
                          <h1>Izabela Witkowicz</h1>
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
-                    <div class="col-md-4 col-sm-6" style="margin-bottom: 20px;">
+                    <div class="col-md-4 col-sm-6 about-photo">
                          <img src="images/PsychologKatowiceWitkowicz.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
                     </div>
                     <div class="col-md-8 col-sm-6">
@@ -265,7 +265,7 @@
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-4">
                               <p>Izabela Witkowicz</p>
-                              <p>Psychoterapeuta, psycholog</p>
+                              <p>psychoterapeuta, psycholog</p>
                               <p>Katowice</p>
                          </div>
                          <div class="col-md-4 col-sm-4">
