--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                          <div><h1>Psycholog Katowice - Izabela Witkowicz</h1></div>
                     </div>
                     <div class="col-md-7 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> +48 795-876-144</span>
+                         <span class="phone-icon"><i class="fa fa-phone"></i><a href="tel:+48 795-876-144"> +48 795-876-144</a></span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></span>
                     </div>
                </div>
@@ -42,7 +42,7 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <a href="/" class="navbar-brand" style="padding-top: 1rem;">
-                         <img src="./images/Logo_IW.png" style="max-height: 40px; max-width: 100%"/>
+                         <img src="./images/Logo_IW.png" alt="therapist logo" style="max-height: 40px; max-width: 100%"/>
                     </a>
                </div>
                <div class="collapse navbar-collapse">
