all phones clickable

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                               <li>Nie akceptujesz siebie&nbsp?</li>
                          </ul>
                          <br>
-                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i zmierzyć się z nimi.</p>
+                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i&nbspzmierzyć się z nimi.</p>
                          <br>
                          <p>Jestem psychologiem i&nbsppsychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
                               W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
@@ -269,7 +269,7 @@
                               <p>Katowice</p>
                          </div>
                          <div class="col-md-4 col-sm-4">
-                              <p>Telefon: +48 795 876 144</p>
+                              <p>Telefon: <span><a href="tel:+48 795-876-144"> +48 795-876-144</a></span></p>
                               <p>E-mail: <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                          </div>
                          <div class="col-md-3 col-sm-3">
