all phones clickable update

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                          </div>
                          <div class="contact-info">
                               <div class="col-md-12 col-sm-12">
-                                   <p><i class="fa fa-phone"></i> +48 795-876-144</p>
+                                   <a href="tel:+48 795-876-144"><p><i class="fa fa-phone"></i> +48 795-876-144</p></a>
                               </div>
                               <div class="col-md-12 col-sm-12">
                                    <p><i class="fa fa-envelope-o"></i> <a class="contact-mail" href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
@@ -269,7 +269,7 @@
                               <p>Katowice</p>
                          </div>
                          <div class="col-md-4 col-sm-4">
-                              <p>Telefon: <span><a href="tel:+48 795-876-144"> +48 795-876-144</a></span></p>
+                              <p>Telefon: <a href="tel:+48 795-876-144">+48 795-876-144</a></p>
                               <p>E-mail: <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                          </div>
                          <div class="col-md-3 col-sm-3">
