removed inline styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
      <title>Psychoterapeuta, psycholog, Katowice | Izabela Witkowicz</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
-     <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, neerwica, depresja">
+     <meta name="description" content="Psycholog Katowice. Psychoterapia Katowice. Leczenie nerwicy, depresji, pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
+     <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, nerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <base href="https://www.psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807211417.css">
+     <link rel="stylesheet" href="css/style_1807212219.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -26,7 +26,7 @@
                     <div class="col-md-5 col-sm-5">
                          <div><h1>Psycholog Katowice - Izabela Witkowicz</h1></div>
                     </div>
-                    <div class="col-md-7 col-sm-7 text-align-right">
+                    <div class="col-md-7 col-sm-7 text-align-right header-contact-data">
                          <span class="phone-icon"><i class="fa fa-phone"></i><a href="tel:+48 795-876-144"> +48 795-876-144</a></span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></span>
                     </div>
@@ -41,8 +41,8 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="/" class="navbar-brand" style="padding-top: 1rem;">
-                         <img src="./images/Logo_IW.png" alt="therapist logo" style="max-height: 40px; max-width: 100%"/>
+                    <a href="/" class="navbar-brand">
+                         <img src="./images/Logo_IW.png" alt="Psychoterapia Katowice Witkowicz"/>
                     </a>
                </div>
                <div class="collapse navbar-collapse">
@@ -56,7 +56,7 @@
                </div>
           </div>
      </section>
-     <section id="about">
+     <section id="about" class="content-section background-gray">
           <div class="container">
                <div class="row justify-text-desktop">
                     <div class="text-align-center">
@@ -64,7 +64,7 @@
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
                     <div class="col-md-4 col-sm-6 about-photo">
-                         <img src="images/PsychologKatowiceWitkowicz.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
+                         <img src="images/PsychologKatowiceWitkowicz.jpg" class="img-responsive" alt="psycholog Katowice Izabela Witkowicz ">
                     </div>
                     <div class="col-md-8 col-sm-6">
                          <br>
@@ -85,20 +85,20 @@
                               W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
                               Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
 
-                         <div style="text-align: center; margin-top: 20px;">
-                              <button id="show-more-about" class="btn" onclick="$('.about-more-hidden').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
+                         <div class="about-btn-container">
+                              <button id="show-more-about" title="Psycholog Izabela Witkowicz" class="btn" onclick="$('.about-more-hidden').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
                          </div>
 
                     </div>
-                    <div class="col-md-12 col-sm-12 about-more-hidden" style="display: none">
-                         <p class="about-more-hidden" style="display: none">Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
+                    <div class="col-md-12 col-sm-12 about-more-hidden">
+                         <p class="about-more-hidden">Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
                               To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
-                              Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
+                              Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się <a href="http://psychiatria.org.pl/sekcja_naukowa_psychoterapii">Kodeksem Zasad Etycznych Psychoterapeuty</a>. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
                          <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w Katowicach ze specjalnością w Psychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia. Obecnie kształcę się w Katedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w Krakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
                          <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
                          <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
-                         <div style="text-align: center">
-                              <button id="hide-more-about" class="btn" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();" style="display: none"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
+                         <div class="text-align-center">
+                              <button title="Psychoterapia Witkowicz - ukryj treść" id="hide-more-about" class="btn about-more-hidden" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
                          </div>
                     </div>
                </div>
@@ -106,7 +106,7 @@
      </section>
 
 
-     <section id="offer">
+     <section id="offer" class="content-section">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -157,12 +157,12 @@
      </section>
 
 
-     <section id="prices" class="text-align-center">
+     <section id="prices" class="content-section text-align-center background-gray">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h2 style="text-align: center">CENNIK</h2>
+                              <h2>CENNIK</h2>
                          </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
@@ -194,12 +194,12 @@
      </section>
 
 
-     <section id="appointment">
+     <section id="appointment" class="content-section">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
-                         <div class="section-title">
-                              <h2 style="text-align: center">KONTAKT</h2>
+                         <div class="section-title text-align-center">
+                              <h2>KONTAKT</h2>
                          </div>
                          <div class="contact-info">
                               <div class="col-md-12 col-sm-12">
@@ -209,7 +209,7 @@
                                    <p><i class="fa fa-envelope-o"></i> <a class="contact-mail" href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                               </div>
                          </div>
-                         <div class="col-md-12 col-sm-12 justify-text-desktop" style="margin-top: 20px">
+                         <div class="col-md-12 col-sm-12 justify-text-desktop appointment-invitation-text">
                               <p>Zapraszam do kontaktu telefonicznego lub mailowego. W&nbspsytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
                               <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania.</p>
                          </div>
@@ -219,10 +219,10 @@
           </div>
      </section>
 
-     <section id="places">
+     <section id="places" class="background-gray">
           <div class="row">
                <div class="container">
-                    <div class="col-md-12 col-sm-12" style="margin-bottom: 20px;">
+                    <div class="col-md-12 col-sm-12 offset-content-below">
                          <h2 class="text-align-center">GDZIE PRZYJMUJĘ</h2>
                     </div>
                     <div class="col-md-6 col-sm-6">
@@ -232,7 +232,7 @@
                                    <p>Katowice, ul. Witosa 21</p>
                               </div>
                               <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
-                                   <img class="places-map" src="images/Map_Feniks.png"/>
+                                   <img class="places-map" src="images/Map_Feniks.png" alt="Dojazd Feniks"/>
                               </a>
                          </div>
                     </div>
@@ -243,7 +243,7 @@
                                    <p>Katowice, ul. św Jana 11</p>
                               </div>
                               <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
-                                   <img class="places-map" src="images/Map_PozaCzasem.png"/>
+                                   <img class="places-map" src="images/Map_PozaCzasem.png" alt="Dojazd PozaCzasem"/>
                               </a>
                               <div class="arrival-description">
                               <p>
@@ -254,6 +254,7 @@
                               </p>
                               </div>
                          </div>
+                    </div>
                     </div>
                </div>
           </div>
