--- a/czytelnia/superwizja.html
+++ b/czytelnia/superwizja.html
@@ -9,10 +9,10 @@
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <base href="https://www.psychoterapia-slaskie.pl" />
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807212226.css">
-     <link rel="icon" href="./images/icon.png">
+     <link rel="stylesheet" href="../css/bootstrap.min.css">
+     <link rel="stylesheet" href="../css/font-awesome.min.css">
+     <link rel="stylesheet" href="../css/style_1807212226.css">
+     <link rel="icon" href="../images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
      <section class="preloader">
@@ -42,7 +42,7 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <a href="/" class="navbar-brand">
-                         <img src="./images/Logo_IW.png" alt="Psychoterapia Katowice Witkowicz"/>
+                         <img src="../images/Logo_IW.png" alt="Psychoterapia Katowice Witkowicz"/>
                     </a>
                </div>
                <div class="collapse navbar-collapse">
@@ -105,11 +105,11 @@
           </div>
      </footer>
 
-     <script src="js/jquery.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/jquery.sticky.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script src="js/custom.js"></script>
+     <script src="../js/jquery.js"></script>
+     <script src="../js/bootstrap.min.js"></script>
+     <script src="../js/jquery.sticky.js"></script>
+     <script src="../js/smoothscroll.js"></script>
+     <script src="../js/custom.js"></script>
 
 </body>
 </html>
